--- a/Debug/makefile
+++ b/Debug/makefile
@@ -34,40 +34,40 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := Bai3_Lcd_button
+BUILD_ARTIFACT_NAME := snakeProject
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-Bai3_Lcd_button.elf \
+snakeProject.elf \
 
 MAP_FILES += \
-Bai3_Lcd_button.map \
+snakeProject.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-Bai3_Lcd_button.list \
+snakeProject.list \
 
 OBJCOPY_HEX += \
-Bai3_Lcd_button.hex \
+snakeProject.hex \
 
 OBJCOPY_BIN += \
-Bai3_Lcd_button.bin \
+snakeProject.bin \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: Bai3_Lcd_button.elf secondary-outputs
+main-build: snakeProject.elf secondary-outputs
 
 # Tool invocations
-Bai3_Lcd_button.elf Bai3_Lcd_button.map: $(OBJS) $(USER_OBJS) C:\Users\Acer\Desktop\DHBK\HK5\DATKLL\final\BKIT_ARM4_Bai3_Lcd_button\Bai3_Lcd_button\STM32F407ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Bai3_Lcd_button.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Acer\Desktop\DHBK\HK5\DATKLL\final\BKIT_ARM4_Bai3_Lcd_button\Bai3_Lcd_button\STM32F407ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Bai3_Lcd_button.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+snakeProject.elf snakeProject.map: $(OBJS) $(USER_OBJS) C:\Users\Acer\Desktop\DHBK\HK5\DATKLL\final\BKIT_ARM4_Bai3_Lcd_button\snakeProject\STM32F407ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "snakeProject.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Acer\Desktop\DHBK\HK5\DATKLL\final\BKIT_ARM4_Bai3_Lcd_button\snakeProject\STM32F407ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="snakeProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -76,24 +76,24 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-Bai3_Lcd_button.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "Bai3_Lcd_button.list"
+snakeProject.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "snakeProject.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-Bai3_Lcd_button.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "Bai3_Lcd_button.hex"
+snakeProject.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "snakeProject.hex"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-Bai3_Lcd_button.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "Bai3_Lcd_button.bin"
+snakeProject.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "snakeProject.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) Bai3_Lcd_button.bin Bai3_Lcd_button.elf Bai3_Lcd_button.hex Bai3_Lcd_button.list Bai3_Lcd_button.map default.size.stdout
+	-$(RM) default.size.stdout snakeProject.bin snakeProject.elf snakeProject.hex snakeProject.list snakeProject.map
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
