--- a/Debug/makefile
+++ b/Debug/makefile
@@ -50,6 +50,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 Bai3_Lcd_button.list \
 
+OBJCOPY_HEX += \
+Bai3_Lcd_button.hex \
+
 OBJCOPY_BIN += \
 Bai3_Lcd_button.bin \
 
@@ -61,8 +64,8 @@ all: main-build
 main-build: Bai3_Lcd_button.elf secondary-outputs
 
 # Tool invocations
-Bai3_Lcd_button.elf: $(OBJS) $(USER_OBJS) E:\HK_231\CE_PROJECT\SnakeProject\STM32F407ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Bai3_Lcd_button.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\HK_231\CE_PROJECT\SnakeProject\STM32F407ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Bai3_Lcd_button.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Bai3_Lcd_button.elf: $(OBJS) $(USER_OBJS) E:\HK_231\Binh\snakeProject\STM32F407ZGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Bai3_Lcd_button.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"E:\HK_231\Binh\snakeProject\STM32F407ZGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Bai3_Lcd_button.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -76,6 +79,11 @@ Bai3_Lcd_button.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+Bai3_Lcd_button.hex: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "Bai3_Lcd_button.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 Bai3_Lcd_button.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "Bai3_Lcd_button.bin"
 	@echo 'Finished building: $@'
@@ -83,10 +91,10 @@ Bai3_Lcd_button.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 
 # Other Targets
 clean:
-	-$(RM) $(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) Bai3_Lcd_button.elf
+	-$(RM) $(OBJCOPY_HEX)$(SIZE_OUTPUT)$(OBJDUMP_LIST)$(EXECUTABLES)$(OBJS)$(S_DEPS)$(S_UPPER_DEPS)$(C_DEPS)$(OBJCOPY_BIN) Bai3_Lcd_button.elf
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
 fail-specified-linker-script-missing:
 	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
